--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "http://uncgirl02.github.io/react-ewart-portfolio/",
+  "homepage": "https://jtal3.github.io/react-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
